# Rust-Document-Assistant

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/core/: document_loader.rs  mod.rs  vector_store.rs
src-tauri/src/models/: mod.rs
src/components/: Chat.tsx  DocumentList.tsx  FileUploader.tsx  index.ts
src/hooks/: index.ts  useBackend.ts
src/pages/: HomePage.tsx
src/services/: api.ts  utils.ts
src/styles/: index.css
